# python-dicasa-dashboard

./: .dockerignore  .gitignore  .replit  Dockerfile  Procfile  activities_table.sql  api_server.py  app.py  create_broker_points.sql  data_processor.py  database.py  docker-compose.yml  flask_server.Dockerfile  flask_server.py  gamification.py  kommo_api.py  monthly_logs_table.sql  package.json  pyproject.toml  render.yaml  replit.nix  requirements.txt  rules_functions.sql  rules_table.sql  server.py  setup.sh  supabase_db.py  supabase_tables.sql  sync_api.py  sync_manager.py  update_activities_table.sql  view_manager.py  visualizations.py  webhook.py  webhook_routes.py  webhook_utils.py
.streamlit/: config.toml
app/: layout.tsx  page.tsx
attached_assets/: Pasted--O-mapa-de-calor-heatmap-em-um-dashboard-de-opera-o-gamificada-uma-ferramenta-visual-poderosa-p-1744391356864.txt  Pasted--This-model-contains-row-level-security-and-requires-additional-setup-for-migrations-Visit-http-1753727017901_1753727017903.txt  Pasted--httpx-INFO-HTTP-Request-GET-https-atlimsuwbzvdrgjwbjyt-supabase-co-rest-v1-brokers-select-2-1747074308740.txt  Pasted-2025-07-23-12-55-07-114-libs-supabase-db-INFO-Calculating-points-for-broker-Mateus-Foss-ID-1-1753275509605_1753275509607.txt  Pasted-Analise-os-arquivos-no-contexto-do-chat-e-corrija-o-modo-como-pego-o-dia-semana-para-criar-o-heat-1744917252930.txt  Pasted-Error-in-leads-sem-interacao-24h-calculation-lead-id-2025-07-24-09-51-12-112-libs-supabase-db--1753350910533_1753350910534.txt  content-1746822344547.md  content-1748364448442.md  (+8 more)
(+12 files in other folders)
